--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -11,4 +11,4 @@ services:
       POSTGRES_PASSWORD: "admin"
     volumes:
       - "/var/lib/postgresql/data/"
-    container_name: pg
+    container_name: pgbinno
