--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -36,6 +36,7 @@ jwt:
 aws:
   access_key_id: ${AWS_KEY}
   secret_access_key: ${AWS_SECRET}
+  host:
   s3:
     bucket: ${S3_BUCKET}
     region: ${S3_REGION}
