--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -40,3 +40,7 @@ aws:
   s3:
     bucket: ${S3_BUCKET}
     region: ${S3_REGION}
+
+mail:
+  domain: central.binnoapp.com
+  api_key: ${API_KEY_MAIL}
