--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -23,3 +23,24 @@ jobs:
         distribution: 'adopt'
     - name: Build with Maven
       run: mvn -B package --file pom.xml
+
+
+  docker:
+    needs: [build]
+    runs-on: ubuntu-latest
+    if: github.ref == 'refs/heads/main'
+
+    steps:
+      - uses: actions/checkout@v2
+      - name: Docker Login
+        uses: docker/login-action@v1.8.0
+        with:
+          username: ${{  secrets.DOCKERHUB_USER }}
+          password: ${{ secrets.DOCKERHUB_PWD }}
+      - name: Criando a Imagem Docker
+        uses: docker/build-push-action@v2.3.0
+        with:
+          tags: |
+            jeanlucafp/binno_pecuaria:latest
+            jeanlucafp/binno_pecuaria:${{ github.run_number }}
+          push: true
