--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -28,7 +28,7 @@ spring:
       minimum-idle: 3
 
     platform: postgres
-    url: jdbc:postgresql://${PG_HOST}:5432/${DATABASE_NAME}
+    url: jdbc:postgresql://${PG_HOST}:${PG_PORT}/${DATABASE_NAME}
     username: ${DATABASE_USER}
     password: ${DATABASE_PWD}
     driverClassName: org.postgresql.Driver
