--- a/src/main/resources/application-test.yml
+++ b/src/main/resources/application-test.yml
@@ -27,9 +27,16 @@ spring:
       maximum-pool-size: 3
       minimum-idle: 1
 
-    url: jdbc:postgresql://containers-us-west-46.railway.app:6947/railway
-    username: postgres
-    password: Ic09I2H8SmBcXuNyFkTy
+#    url: jdbc:postgresql://containers-us-west-46.railway.app:6947/railway
+#    username: postgres
+#    password: Ic09I2H8SmBcXuNyFkTy
+#    driverClassName: org.postgresql.Driver
+
+# teste local
+    platform: postgres
+    url: jdbc:postgresql://localhost:2345/binnosoft_teste
+    username: teste
+    password: teste
     driverClassName: org.postgresql.Driver
 
 #    platform: postgres
