--- a/src/main/resources/application-test.yml
+++ b/src/main/resources/application-test.yml
@@ -15,22 +15,23 @@ spring:
     clean-on-validation-error: false
     locations: classpath:db/migration
     table: schema_history
+    enabled: false
 
   jpa:
     show-sql: true
     hibernate:
-      ddl-auto: none
-      dialect: org.hibernate.dialect.PostgreSQLDialect
+      ddl-auto: update
 
   datasource:
-    hikari:
-      maximum-pool-size: 3
-      minimum-idle: 1
+    driver-class-name: org.h2.Driver
+    username: sa
+    password: password
+    url: jdbc:h2:mem:db_test;MODE=POSTGRESQL
 
-    url: jdbc:postgresql://containers-us-west-180.railway.app:6015/railway
-    username: postgres
-    password: dNCxQdhOHXvdja3cieHO
-    driverClassName: org.postgresql.Driver
+  h2:
+    console:
+      enabled: true
+      path: /h2
 
 jwt:
   expiration: 36000000
