--- a/build.gradle
+++ b/build.gradle
@@ -1,6 +1,6 @@
 plugins {
 	id 'java'
-	id 'org.springframework.boot' version '3.2.1'
+	id 'org.springframework.boot' version '3.1.3'
 	id 'io.spring.dependency-management' version '1.1.4'
 }
 
@@ -17,7 +17,10 @@ repositories {
 
 dependencies {
 	implementation 'org.springframework.boot:spring-boot-starter-web'
+
+	// https://mvnrepository.com/artifact/com.itextpdf/itextpdf
 	implementation("com.itextpdf:itextpdf:5.5.13.3")
+
 	implementation 'org.springdoc:springdoc-openapi-ui:1.7.0'
 	implementation('io.jsonwebtoken:jjwt-api:0.11.5')
 	runtimeOnly('io.jsonwebtoken:jjwt-impl:0.11.5')
@@ -34,7 +37,7 @@ dependencies {
 
 	testImplementation 'org.springframework.boot:spring-boot-starter-test'
 	testImplementation("com.h2database:h2:2.2.224")
-
+	testImplementation "org.testcontainers:postgresql:1.19.3"
 }
 
 tasks.named('test') {
