--- a/build.gradle
+++ b/build.gradle
@@ -1,11 +1,11 @@
 plugins {
 	id 'java'
-	id 'org.springframework.boot' version '3.1.3'
+	id 'org.springframework.boot' version '3.1.3' //3.2.1
 	id 'io.spring.dependency-management' version '1.1.4'
 }
 
 group = 'com.binno'
-version = '1.0.0'
+version = '2.0.0'
 
 java {
 	sourceCompatibility = '17'
@@ -32,11 +32,11 @@ dependencies {
 	implementation("org.postgresql:postgresql:42.7.1")
 	implementation("com.amazonaws:aws-java-sdk-s3:1.12.620")
 	implementation("org.springframework.boot:spring-boot-starter-security")
+
 	compileOnly 'org.projectlombok:lombok:1.18.30'
 	annotationProcessor 'org.projectlombok:lombok:1.18.30'
 
 	testImplementation 'org.springframework.boot:spring-boot-starter-test'
-	testImplementation("com.h2database:h2:2.2.224")
 	testImplementation "org.testcontainers:postgresql:1.19.3"
 }
 
